--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -120,6 +120,11 @@ Main page styles
 .card {
   width: 100%; /* Make the card take up the full width of its container */
 }
+
+.card-title {
+  font-size: 30px;
+}
+
 .mySlides jhi-carousel {
   margin-top: 10px; /* Adjust as needed */
   margin-bottom: 10px; /* Adjust as needed */
