--- a/src/main/webapp/app/search-form/search-form.component.html
+++ b/src/main/webapp/app/search-form/search-form.component.html
@@ -132,7 +132,7 @@
           <div class="form-group">
             <label for="search" class="sr-only">Search:</label>
             <!-- Added label for search button -->
-            <button type="submit" id="search" class="btn btn-primary" aria-label="Perform search" tabindex="5">Search</button>
+            <button type="submit" id="search" class="btn btn-primary" aria-label="Perform search">Search</button>
           </div>
         </div>
       </div>
