Removed the typeahead hint from the form input fields

--- a/src/main/webapp/app/search-form/search-form.component.html
+++ b/src/main/webapp/app/search-form/search-form.component.html
@@ -101,7 +101,7 @@
                   id="tags"
                   class="form-control tag-input"
                   ngbDropdownToggle
-                  placeholder="Type to search tags..."
+                  placeholder="Select tags ..."
                   [ngbTypeahead]="typeaheadTags"
                   (selectItem)="onSelectTag($event)"
                 />
