--- a/src/main/webapp/app/trending/trending.component.scss
+++ b/src/main/webapp/app/trending/trending.component.scss
@@ -16,7 +16,7 @@
       padding: 8px 20px; /* Adds space above and below the text */
       font-family: 'Arial', sans-serif; /* Choose a font that fits your design */
       color: white; /* A dark grey color; feel free to choose your own */
-      background: #333; /* dark grey color */
+      background: lightgrey; /* dark grey color */
       display: inline-block;
       margin: 0;
       border-radius: 5px;
@@ -31,11 +31,10 @@
 
 .route-title {
   font-size: 24px; /* Adjust the size as needed */
-  font-weight: bold;
   padding: 8px 20px; /* Adds space above and below the text */
   font-family: 'Arial', sans-serif; /* Choose a font that fits your design */
-  color: white; /* A dark grey color; feel free to choose your own */
-  background: #333; /* dark grey color */
+  color: black; /* A dark grey color; feel free to choose your own */
+  background: lightgrey; /* dark grey color */
   display: inline-block;
   margin: 0;
   border-radius: 5px;
@@ -58,11 +57,9 @@
 }
 
 .route-item {
-  border: 1px solid #ccc;
   border-radius: 8px;
   margin-bottom: 10px;
   padding: 10px;
-  background-color: #f9f9f9;
 }
 
 .route-info p {
