finish dark mode for all features

--- a/src/main/webapp/app/search-form/search-form.component.html
+++ b/src/main/webapp/app/search-form/search-form.component.html
@@ -14,7 +14,8 @@
               <input
                 id="city"
                 type="text"
-                class="form-control"
+                class="box form-control"
+                [class.dark-mode]="isDarkMode"
                 formControlName="city"
                 [ngbTypeahead]="typeaheadSearch"
                 placeholder="Enter a city"
@@ -44,7 +45,8 @@
               type="text"
               formControlName="price"
               id="price"
-              class="form-control"
+              class="box form-control"
+              [class.dark-mode]="isDarkMode"
               placeholder="Enter price in (£)"
               aria-label="Price"
               [attr.aria-invalid]="searchForm.controls['price']?.invalid ? true : null"
@@ -71,7 +73,8 @@
               type="text"
               formControlName="distance"
               id="distance"
-              class="form-control"
+              class="box form-control"
+              [class.dark-mode]="isDarkMode"
               placeholder="Enter distance"
               aria-label="Distance"
               [attr.aria-invalid]="searchForm.controls['distance']?.invalid ? true : null"
@@ -99,7 +102,8 @@
                 <input
                   type="text"
                   id="tags"
-                  class="form-control tag-input"
+                  class="box form-control tag-input"
+                  [class.dark-mode]="isDarkMode"
                   ngbDropdownToggle
                   placeholder="Select tags ..."
                   [ngbTypeahead]="typeaheadTags"
