--- a/src/main/webapp/app/for-you/for-you.component.html
+++ b/src/main/webapp/app/for-you/for-you.component.html
@@ -20,7 +20,7 @@
         <!-- Display recommendation component if showLoadingMessage is false -->
         <section *ngFor="let route of routes" [class.dark-mode]="isDarkMode">
           <p>
-            <strong>[Route#{{ route.id }}]</strong> <br />
+            <strong>[Route#{{ route.id }} --- {{ route.title }} ]</strong> <br />
             - {{ route.distance }} Km <br />
             - Rating: {{ route.rating }}
           </p>
