change routing in user profile from route entity to map display

--- a/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
+++ b/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
@@ -29,7 +29,7 @@
         <dd>
           <ul>
             <li *ngFor="let route of routes; let last = last">
-              <a [routerLink]="['/route', route.id, 'view']">{{ route.title }}</a> {{ last ? '' : ', ' }}
+              <a [routerLink]="['/mapDisplay', route.id]">{{ route.title }}</a> {{ last ? '' : ', ' }}
             </li>
           </ul>
         </dd>
