--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -23,10 +23,17 @@ Main page styles
   }
 }*/
 
-.background {
+.background.dark-mode {
   /* Adjust the color codes as needed */
   background-size: cover;
   background: linear-gradient(to bottom, #005757, #000000) center;
+  min-height: 150vh; /* Ensures that the background covers the entire viewport height */
+}
+
+.background:not(.dark-mode) {
+  /* Adjust the color codes as needed */
+  background-size: cover;
+  background: linear-gradient(to bottom, #005757, #0a7e8c) center;
   min-height: 150vh; /* Ensures that the background covers the entire viewport height */
 }
 
@@ -140,11 +147,23 @@ Main page styles
 
 .card-container {
   margin-bottom: 10px; /* Adjust margin between cards */
-  width: 100%; /* Make each card take up the full width of the container */
+  width: 90%; /* Make each card take up 90% of the container */
+  margin-left: 20px;
 }
 
-.card {
+.card:not(.dark-mode) {
   width: 100%; /* Make the card take up the full width of its container */
+  border: 1px solid #ccc;
+}
+.card.dark-mode {
+  width: 100%; /* Make the card take up the full width of its container */
+  background-color: #222;
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
+  border: 1px solid #333;
+}
+.card:hover {
+  transform: scale(1.02);
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2), 0 2px 16px rgba(0, 0, 0, 0.2);
 }
 
 .card-title {
@@ -160,7 +179,7 @@ Main page styles
     width: 80%;
   }
 }
-.resultsCard {
+.resultsCard:not(.dark-mode) {
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -169,6 +188,24 @@ Main page styles
   transition: box-shadow 0.3s ease;
   margin: 0 auto;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Vertically center the child elements */
+  align-items: center; /* Horizontally center the child elements */
+  margin-top: 2%;
+  height: auto;
+  flex-grow: 1;
+}
+
+.resultsCard.dark-mode {
+  border: 1px solid #333;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  width: 80%;
+  transition: box-shadow 0.3s ease;
+  margin: 0 auto;
+  background-color: #222;
   display: flex;
   flex-direction: column;
   justify-content: center; /* Vertically center the child elements */
